--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,17 +1,12 @@
-
 FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json package-lock.json ./ 
 
-
-RUN npm ci --only=production
-
-
+RUN npm ci
 
 COPY . .
-
 
 EXPOSE 5000
 
