--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -30,12 +30,13 @@ jobs:
       - name: Create .env from repo secrets
         run: |
           cat > $GITHUB_WORKSPACE/.env <<'EOF'
-          RAZORPAY_API_KEY=${{ secrets.RAZORPAY_API_KEY }}
+          RAZORPAY_KEY_ID=${{ secrets.RAZORPAY_KEY_ID }}
           RAZORPAY_KEY_SECRET=${{ secrets.RAZORPAY_KEY_SECRET }}
+          RAZORPAY_WEBHOOK_SECRET=${{ secrets.RAZORPAY_WEBHOOK_SECRET }}
           GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-          MONOGO_URL=${{ secrets.MONOGO_URL }}
-          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          MONOGO_URI=${{ secrets.MONOGO_URI }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}  
           PORT=${{ secrets.PORT }}
           IMAGEKIT_PUBLIC_KEY=${{ secrets.IMAGEKIT_PUBLIC_KEY }}
           IMAGEKIT_PRIVATE_KEY=${{ secrets.IMAGEKIT_PRIVATE_KEY }}
