--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,7 +20,9 @@
     "imagekit": "^6.0.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.32",
     "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
     "winston": "^3.18.3",
