--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.33",
+    "@ai-sdk/xai": "^2.0.41",
+    "@google/genai": "^1.34.0",
+    "ai": "^5.0.115",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -19,6 +23,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.5.0",
+    "groq-sdk": "^0.37.0",
     "imagekit": "^6.0.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
@@ -28,6 +33,7 @@
     "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
+    "wav": "^1.0.2",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
   }
