--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
     "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
+    "stripe": "^20.1.0",
     "wav": "^1.0.2",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
