Add Brevo credentials to workflow and fix related issues

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -30,9 +30,6 @@ jobs:
       - name: Create .env from repo secrets
         run: |
           cat > $GITHUB_WORKSPACE/.env <<EOF
-          RAZORPAY_KEY_ID=${{ secrets.RAZORPAY_KEY_ID }}
-          RAZORPAY_KEY_SECRET=${{ secrets.RAZORPAY_KEY_SECRET }}
-          RAZORPAY_WEBHOOK_SECRET=${{ secrets.RAZORPAY_WEBHOOK_SECRET }}
           GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
           MONGODB_URI=${{ secrets.MONGODB_URI }}
@@ -42,10 +39,11 @@ jobs:
           IMAGEKIT_PRIVATE_KEY=${{ secrets.IMAGEKIT_PRIVATE_KEY }}
           IMAGEKIT_URL_ENDPOINT=${{ secrets.IMAGEKIT_URL_ENDPOINT }}
           CORS_ORIGIN=${{ secrets.CORS_ORIGIN }}
-          GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
           STRIPE_PREMIUM_PRICE_ID=${{ secrets.STRIPE_PREMIUM_PRICE_ID }}
           STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }}
           STRIPE_WEBHOOK_SECRET=${{ secrets.STRIPE_WEBHOOK_SECRET }}
+          BREVO_SMTP_LOGIN=${{ secrets.BREVO_SMTP_LOGIN }}
+          BREVO_SMTP_PASSWORD=${{ secrets.BREVO_SMTP_PASSWORD }}
           REDIS_URL=${{ secrets.REDIS_URL }}
           EOF
           #  show where file saved
