--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=https://api.connexto.site/api/v1/
+ VITE_API_BASE_URL=https://api.connexto.site/api/v1
 VITE_GOOGLE_CLIENT_ID=90436528936-1c6bqs44ee17aefkjtbpp6ri8bl96k79.apps.googleusercontent.com
 VITE_IMAGEKIT_PUBLIC_KEY=public_o4ea+HkndObMFt88hPbLpyy2MAU=
 
